# data-cost-optimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  local_csv_io.py  pyproject.toml  query_history_extractor.py  requirements.txt
resources/: dco_snowflake_connection.py
