[tool.poetry]
name = "data-cost-optimizer"
version = "0.1.0"
description = ""
authors = ["Nehil Jain <2761999+nehiljain@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
snowflake-connector-python = {extras = ["pandas"], version = "^2.7.8"}
dagster = "^0.14.17"
dagster-snowflake = "^0.14.17"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
commitizen = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
